Fix cool bar overflow and warning when extending reports

--- a/src/main/webapp/components/Coolbar.less
+++ b/src/main/webapp/components/Coolbar.less
@@ -1,5 +1,5 @@
-cool-bar, 
-div.COOLBAR, 
+gate-coolbar,
+div.COOLBAR,
 div.Coolbar { .margin();
 	      width: 100%;
 	      height: 48px;
@@ -77,9 +77,9 @@ div.Coolbar { .margin();
 
 	      &[data-overflow]
 	      {
-		      height: auto;	
+		      height: auto;
 
-		      > a
+		      > a, > button
 		      {
 			      > i { font-size: 16px;
 				    margin-left: 0px; }
@@ -91,4 +91,4 @@ div.Coolbar { .margin();
 
 		      }
 	      }
-} 
+}
